# aurora-browser-rust

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  gen_icon.rs  info.md  make_favicon.rs  make_ico.rs  order.txt
.cargo/: config.toml
docs/: favicon128.b64  favicon32.b64  favicon64.b64
locales/: de.json  en.json  es.json  fr.json  ko.json  ru.json
src/: about.html  about.rs  app.rs  benchmarks.html  benchmarks.rs  bookmarks.html  bookmarks_page.rs  config.rs  dialogs.rs  downloads.html  downloads_page.rs  error.html  error.rs  events.rs  extensions.html  extensions.rs  feedback.html  feedback.rs  history.html  history.rs  icon.rs  incognito.html  incognito.rs  internal_server.rs  ipc.rs  main.rs  portal.html  portal.rs  servo_view.rs  settings.html  settings.rs  tab_groups.html  tab_groups.rs  test.html  test_page.rs  toolbar.html  toolbar.rs  webviews.rs
tests/: index.html  test-css-counters.html  test-css-position-table.html  test-css-position.html  test-engine-info.html  test-flexbox-alignment.html  test-scroll-interaction.html
wry-patched/: .cargo_vcs_info.json  Cargo.toml
wry-patched/src/webview2/: mod.rs
