[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = "0.46"
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
