[package]
name = "aurora"
version = "0.4.11"
edition = "2021"
license = "MIT"
authors = ["theloopbreaker4-cloud"]
description = "Aurora Browser — a lightweight Rust browser with WebView2/Servo engine support"
repository = "https://github.com/theloopbreaker4-cloud/AuroraBrowserRust"

[[bin]]
name = "make_ico"
path = "make_ico.rs"

[[bin]]
name = "make_favicon"
path = "make_favicon.rs"

[dependencies]
wry = { version = "0.46", features = ["devtools"] }
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.44"
tiny-skia = "0.11"
raw-window-handle = "0.6"
dpi = { version = "0.1", optional = true }
keyboard-types = { version = "0.8", optional = true }
euclid = { version = "0.22", optional = true }

# Servo engine — embedded rendering backend
# Features: minimal set, no media/bluetooth/webxr, no baked-in-resources (we supply them)
[dependencies.servo]
path = "../ServoRust/servo/components/servo"
default-features = false
features = ["baked-in-resources", "gamepad"]
optional = true

[features]
default = []
servo-engine = ["dep:servo", "dep:dpi", "dep:keyboard-types", "dep:windows-sys", "dep:euclid", "dep:notify-rust"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL", "Win32_UI_Controls_Dialogs"], optional = true }
notify-rust = { version = "4", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[patch.crates-io]
wry = { path = "wry-patched" }

# Aurora local stylo patch (2026-04-25): unblocks :has() selector and
# backdrop-filter property parsing. Local clone at d:/stylo, pinned to
# upstream rev 96ceb5405b plus two small patches in
# style/servo/selector_parser.rs and style/properties/longhands.toml.
# This must be replicated here because Aurora has its own Cargo.lock and
# does not inherit [patch] sections from ServoRust's workspace.
[patch."https://github.com/servo/stylo"]
selectors = { path = "d:/stylo/selectors" }
servo_arc = { path = "d:/stylo/servo_arc" }
stylo = { path = "d:/stylo/style" }
stylo_atoms = { path = "d:/stylo/stylo_atoms" }
stylo_dom = { path = "d:/stylo/stylo_dom" }
stylo_malloc_size_of = { path = "d:/stylo/malloc_size_of" }
stylo_static_prefs = { path = "d:/stylo/stylo_static_prefs" }
stylo_traits = { path = "d:/stylo/style_traits" }
